--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\EysiCrazy\\Python\\Python37-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\EysiCrazy\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
     "git.ignoreLimitWarning": true
 }
